--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/cegolf/webpage",
+  "homepage": "https://github.com/cegolf/chris-webpage",
   "name": "personal-webpage",
   "version": "0.1.0",
   "private": true,
