--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "web-vitals": "^1.1.1"
   },
   "scripts": {
-    "predeply": "npm run build",
+    "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -41,6 +41,6 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "3.1.0"
+    "gh-pages": "^3.1.0"
   }
 }
