changed homepage url

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/cegolf/chris-webpage",
+  "homepage": "https://chrisegolf.com",
   "name": "chris-webpage",
   "version": "0.1.0",
   "private": true,
